<resources>
    <string name="app_name">Alpha Noticias</string>
    <string name="username_txt">Usuário</string>
    <string name="name_txt">Nome</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Senha</string>
    <string name="confirmpassword_txt">Confirmar Senha</string>
    <string name="signin_txt">Entrar</string>
    <string name="signup_txt">Resgistrar-se</string>
    <string name="register_txt">Criar conta</string>
    <string name="return_txt">Voltar</string>
    <string name="signout_txt">Sair</string>
    <string name="nova_noticia_txt">CRIAR NOTÍCIA</string>
    <string name="titulo_txt">Título</string>
    <string name="descricao_txt">Descrição</string>
    <string name="noticias_txt">Notícias</string>
    <string name="criar_noticia_txt">Criar notícia</string>
    <string name="content_description_media">Thumbnail</string>
    <string name="news_action_1">Ler</string>
    <string name="news_action_2">Editar</string>
    <string name="news_action_3">Excluir</string>
    <string name="btn_convidar_txt">Convidar</string>
    <string name="title_activity_editar_noticia">EditarNoticiaActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="editar_not_cia">EDITAR NOTÍCIA</string>
    <string name="visualizar_usuarios">Visualizar usuários</string>
    <string name="lista_de_usuarios_tit">Lista de Usuários</string>
    <string name="config_text">config</string>
    <string name="menu_txt">MENU</string>
</resources>