<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNoticiaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <!--Adicionar uploader de fotos -->

            <!--Titulo-->
            <EditText
                android:id="@+id/createTitulo"
                android:layout_marginTop="20dp"
                android:hint="@string/titulo_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_input_background"
                android:textColor="@color/white"
                android:padding="10dp"
                />

            <!--Descricao-->

            <Button
                android:id="@+id/btnAddImagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adicionar Imagem"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background"/>
            <ImageView
                android:id="@+id/viewImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                />

            <EditText
                android:id="@+id/createDescricao"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="text|textMultiLine"
                android:gravity="top"
                android:hint="@string/descricao_txt"
                android:layout_marginTop="10dp"
                android:background="@drawable/register_input_background"
                android:textColor="@color/white"
                android:padding="10dp"
                />

            <!--botao de criar noticia-->
            <Button
                android:id="@+id/btn_create_noticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/nova_noticia_txt"
                android:textSize="21sp"
                android:background="@drawable/button_background"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
